Header updated & now 'stars icon' correctly aligned

--- a/style.css
+++ b/style.css
@@ -41,13 +41,13 @@ body {
   grid-template-columns: auto auto;
 }
 
-/* .home {
+.home {
   justify-content: left;
 }
 
 .stars-icon {
-  justify-items: right;
-} */
+  text-align: right;
+}
 
 .search {
   grid-area: search;
